--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
     "nested"
   ],
   "author": "Phillip Gibson <gibson.phillip.j@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renolc/obj-get"
+  },
+  "bugs": {
+    "url": "https://github.com/renolc/obj-get/issues"
+  }
 }
